ubiquity (19.10.1) UNRELEASED; urgency=medium

  * Switch sources to eoan.
  * Automatic update of included source packages: apt-setup
    1:0.141ubuntu3, base-installer 1.158ubuntu5, choose-mirror
    2.78ubuntu6, console-setup 1.191ubuntu3, flash-kernel 3.98ubuntu1,
    partman-jfs 57, partman-lvm 130, preseed 1.71ubuntu10, tzsetup
    1:0.94ubuntu2.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 23 May 2019 12:14:53 +0100

ubiquity (19.04.9) disco; urgency=medium

  * KDE front end: PartitionModel.py - Remove code depreciated in port from
    PyQt4 to PyQt5. Fixes crash on clicking checkbox to format a partition in
    the main partitioning page. (LP: #1687637)

 -- Rik Mills <rikmills@kubuntu.org>  Mon, 08 Apr 2019 14:20:35 -0400

ubiquity (19.04.8) disco; urgency=medium

  [ Jean-Baptiste Lallement ]
  * Always install free drivers with ubuntu-drivers. This allows automated
    installation of drivers like open-vm-tools-desktop at installation time of
    VMware guests for example.

 -- Iain Lane <iain.lane@canonical.com>  Wed, 03 Apr 2019 13:10:57 +0100

ubiquity (19.04.7) disco; urgency=medium

  [ Unit 193 ]
  * bin/ubiquity-dm: Disable the the panel in ubiquity-dm when using xfwm4
    again. (LP: #1795216)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 19 Mar 2019 09:22:05 -0400

ubiquity (19.04.6.2) disco; urgency=medium

  * Automatic update of included source packages: console-setup
    1.178ubuntu11, partman-basicmethods 69, partman-crypto 101ubuntu2,
    partman-jfs 56. (LP: #1810647, LP: #1817453)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 18 Mar 2019 10:48:24 -0400

ubiquity (19.04.6.1) disco; urgency=medium

  * Automatic update of included source packages: partman-base
    206ubuntu1 (LP: #1818285).

 -- Iain Lane <iain.lane@canonical.com>  Tue, 05 Mar 2019 12:49:08 +0000

ubiquity (19.04.6) disco; urgency=medium

  * Automatic update of included source packages: user-setup
    1.63ubuntu6.