@@ -33,11 +33,6 @@ if test "x$UBIQUITY_NO_GTK" = x; then
 			  x11])
   AC_SUBST(PANEL_CFLAGS)
   AC_SUBST(PANEL_LIBS)
-  PKG_CHECK_MODULES(WALLPAPER, [glib-2.0
-			  gtk+-3.0 >= $GTK3_REQUIRED
-			  x11])
-  AC_SUBST(WALLPAPER_CFLAGS)
-  AC_SUBST(WALLPAPER_LIBS)
   PKG_CHECK_MODULES(MOCK_RESOLVER, [glib-2.0
 			  gio-2.0])
   AC_SUBST(MOCK_RESOLVER_CFLAGS)
@@ -45,15 +40,12 @@ if test "x$UBIQUITY_NO_GTK" = x; then
   GOBJECT_INTROSPECTION_CHECK([0.6.7])
   AC_CONFIG_FILES(
 	src/Makefile
-	src/wallpaper/Makefile
 	src/panel/Makefile
 	src/mockresolver/Makefile
 	)
 else
   AC_SUBST(PANEL_CFLAGS, [""])
   AC_SUBST(PANEL_LIBS, [""])
-  AC_SUBST(WALLPAPER_CFLAGS, [""])
-  AC_SUBST(WALLPAPER_LIBS, [""])
 fi
 
 AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${datadir}/${PACKAGE}/pixmaps", [pixmaps directory])
