@@ -1,7 +1,0 @@
-AM_CPPFLAGS = $(WALLPAPER_CFLAGS)
-AM_LDFLAGS = $(WALLPAPER_LIBS)
-
-pkglibexec_PROGRAMS = wallpaper
-
-wallpaper_SOURCES = wallpaper.c
-
