@@ -6,6 +6,8 @@ ubiquity (19.10.1) UNRELEASED; urgency=medium
     2.78ubuntu6, console-setup 1.191ubuntu3, flash-kernel 3.98ubuntu1,
     partman-jfs 57, partman-lvm 130, preseed 1.71ubuntu10, tzsetup
     1:0.94ubuntu2.
+  * Drop wallpaper app, unused since 2.13.13.
+    (raring, git diff 076d364 4ebb6c1)
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 23 May 2019 12:14:53 +0100
 
